k8s/doctor-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-db
  template:
    metadata:
      labels:
        app: doctor-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
