k8s/doctor-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-db
spec:
  selector:
    app: doctor-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
