k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-service
  labels:
    app: hospital-api   # REQUIRED
spec:
  selector:
    app: hospital-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
